Made the core work on Android 4.1 (API v16).

--- a/android/capacitor/src/main/res/drawable/ic_transparent.xml
+++ b/android/capacitor/src/main/res/drawable/ic_transparent.xml
@@ -4,9 +4,9 @@
     android:height="16dp"
     android:viewportHeight="108"
     android:viewportWidth="108">
-
+<!-- FIXME
     <path
         android:width="1dp"
         android:color="@android:color/transparent" />
-
+-->
 </vector>
